tests/NormalTests/paczka1/fuzzy1/60015362.err
Error in line 3: qBVvZ9 S528 78,8
Error in line 2: A353 A794 17,7
Error in line 24: A353 S528 94,4
Error in line 19: 507 A353 61,6
Error in line 30: P8e5mzEceLg A353 66,23
Error in line 31: P8e5mzEceLg A353 131,3
Error in line 34: P8e5mzEceLg A794 55,10
Error in line 39: qBVvZ9 A794 91,5
